# RoboLab

./: .gitignore  CMakeLists.txt  README.md  README_cn.md  Untitled  build.sh  convert_pth_to_onnx.sh  start.sh  start_cameras.sh  start_inference.sh
apps/: CMakeLists.txt  main.cpp
checkpoints/onnx/: FrankaCubeReach.onnx  FrankaCubeStack.onnx  convert_to_trt.sh
checkpoints/pth/: FrankaCubeReach.pth  FrankaCubeStack.pth
config/: bringup_cameras.yaml  bringup_franka_config.yaml  bringup_inference_demo.yaml
config/cartesian_control/: cartesian_control_config.yaml
config/inference/: FrankaReach_inference_config.yaml  demo_inference_config.yaml
config/plugins/: cartesian_controller_plugin_config.yaml  demo_inference_plugin_config.yaml  franka_plugin_config.yaml  franka_plugin_config_2.yaml  kinect_plugin_config.yaml  realsense_plugin_config.yaml  recorder_plugin_config.yaml  ros_bridge_plugin_config.yaml
include/: framework.h  message_system.h  plugin_interface.h  robo_lab.h
include/cartesian_control/: cartesian_controller.h  jacobian_calculator.h
include/inference/: inference_interface.h
include/plugins/: cartesian_control_plugin.h  demo_inference_plugin.h  franka_plugin.h  franka_sim_plugin.h  kinect_plugin.h  realsense_plugin.h  recorder_plugin.h  ros_bridge_plugin.h
proto/: demo_inference.proto  franka.proto  kinect.proto
python/: create_conda_env.sh
python/config/: senior_care.yaml
python/robo_lab/: requirements.txt
python/robo_lab/agent/: __init__.py  base.py
python/robo_lab/agent/system_0/: __init__.py
python/robo_lab/agent/system_0/spinal_cord_senior_care/: __init__.py  spinal_cord_senior_care.py
python/robo_lab/agent/system_1/: __init__.py
python/robo_lab/agent/system_1/cerebellum_senior_care/: __init__.py  cerebellum_senior_care.py
python/robo_lab/agent/system_2/: __init__.py
python/robo_lab/agent/system_2/brain_senior_care/: __init__.py  brain_senior_care.py  grounded_sam.py  predefined_targets_publisher.py
python/robo_lab/model/sam2/: __init__.py  gsam2_session.py
python/robo_lab/model/utils/: convert_pth_to_nnx.py
python/robo_lab/proto_gen/: __init__.py  demo_inference_pb2.py  franka_pb2.py  kinect_pb2.py
python/robo_lab/tools/: __init__.py  publish_demo_obs.py
python/scripts/: start.py
ros_ws/: start_franka_moveit_config_sim.sh  start_franka_rviz.sh
ros_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ros_ws/devel/lib/pkgconfig/: franka_description.pc  franka_moveit_config.pc  franka_panda_moveit_config.pc
ros_ws/devel/share/franka_description/cmake/: franka_descriptionConfig.cmake
ros_ws/devel/share/franka_moveit_config/cmake/: franka_moveit_configConfig.cmake
ros_ws/devel/share/franka_panda_moveit_config/cmake/: franka_panda_moveit_configConfig.cmake
ros_ws/src/franka_moveit_config/: .setup_assistant  package.xml
ros_ws/src/franka_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  panda.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
ros_ws/src/franka_moveit_config/launch/: demo.launch  gazebo.launch  moveit.rviz  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml
ros_ws/src/franka_test/: CMakeLists.txt  package.xml
ros_ws/src/franka_test/launch/: demo.launch
ros_ws/src/franka_test/scripts/: auto_cube_interface.py  auto_obstacle_interface.py  cube_interface.py  obstacle_interface.py  pid_executer.py  sim_pid_executer copy.py  sim_pid_executer.py
ros_ws/src/franka_test/src/: .franka_node.cpp.swp  franka_node.cpp  franka_record.cpp
ros_ws/src/speed_adaptive_control/: CMakeLists.txt  package.xml
ros_ws/src/speed_adaptive_control/backup/: franka_interface copy.cpp  franka_interface copy.h
ros_ws/src/speed_adaptive_control/config/: dynamical_parameters_franka.yaml  task.yaml
ros_ws/src/speed_adaptive_control/include/speed_adaptive_control/: apf_controller.h  jacobian_calculator.h  mpc_governor.h  reference_selector.h  rl_executer.h
ros_ws/src/speed_adaptive_control/launch/: bring_up_rl.launch
ros_ws/src/speed_adaptive_control/scripts/: apf_controller.py  jacobian_publisher.py  reference_selector.py  rrt_moveit_plan.py  task_manager.py  teach.py
ros_ws/src/speed_adaptive_control/src/: apf_controller.cpp  jacobian_calculator.cpp  mpc_governor.cpp  reference_selector.cpp  rl_executer.cpp
scripts/: franka_arm_traj_replay.py  install_x86.sh  publish_demo.sh  publish_demo_command.py  realsense_subsscribe.py  regen_proto_py.sh  requirements.txt  subscriber.py
src/: CMakeLists.txt  framework.cpp  message_system.cpp  robo_lab.cpp
src/cartesian_control/: CMakeLists.txt  cartesian_controller.cpp  jacobian_calculator.cpp
src/inference/: CMakeLists.txt  inference_interface.cpp  io_processor.cpp  trt_session.cpp
src/plugins/: CMakeLists.txt  cartesian_control_plugin.cpp  demo_inference_plugin.cpp  franka_plugin.cpp  kinect_plugin.cpp  realsense_plugin.cpp  recorder_plugin.cpp  ros_bridge_plugin.cpp
